drop down-not finished collapse- n0t finished cards- fixed

--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ body{
   background-color: pink;
   font-size: 30px;
 }
+
+.card{
+
+  text-align: center;
+}
